--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://AlonsoCGonzales.github.io/trabajoweb-react/",
+  "homepage": "https://AlonsoCGonzales.github.io/trabajoweb-react",
   "name": "trabajoweb-react",
   "version": "0.1.0",
   "private": true,
